<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_fridge"
        android:icon="@drawable/ic_add_fridge"
        android:title="@string/add_fridge"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorToolbarItem"/>
    <item
        android:id="@+id/action_delete_fridge"
        android:icon="@drawable/ic_delete_fridge"
        android:title="@string/delete_fridge"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorToolbarItem"
        />
    <item
        android:id="@+id/action_add_product"
        android:icon="@drawable/ic_add_product"
        android:title="@string/add_product"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorToolbarItem"
        />
    <item
        android:id="@+id/action_delete_product"
        android:icon="@drawable/ic_delete_product"
        android:title="@string/delete_product"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorToolbarItem"/>
    <item
        android:id="@+id/action_confirm"
        android:icon="@drawable/ic_ok"
        android:title="@string/confirm"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorToolbarItem"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        android:title="@string/cancel"
        app:showAsAction="ifRoom"
        app:iconTint="@color/colorToolbarItem"/>

</menu>